perform: big update in service & repository layer to optimize system performance during k6 tests